# semaphoreui/models/template_request.go
@@ -112,7 +112,7 @@ type TemplateRequest struct {
 	SurveyVars []*TemplateSurveyVar `json:"survey_vars"`
 
 	// task params
-	TaskParams *TaskPrams `json:"task_params,omitempty"`
+	TaskParams *TemplateTaskParams `json:"task_params,omitempty"`
 
 	// type
 	// Enum: ["","build","deploy"]
