# semaphoreui/models/template_task_params.go
@@ -1,0 +1,340 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+import (
+	"context"
+	"encoding/json"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag/jsonutils"
+)
+
+// TemplateTaskParams Flat application-specific template settings, distinct from task invocation parameters.
+//
+// swagger:model TemplateTaskParams
+type TemplateTaskParams struct {
+
+	// allow auto approve
+	AllowAutoApprove *bool `json:"allow_auto_approve,omitempty"`
+
+	// allow debug
+	AllowDebug *bool `json:"allow_debug,omitempty"`
+
+	// allow destroy
+	AllowDestroy *bool `json:"allow_destroy,omitempty"`
+
+	// allow override inventory
+	AllowOverrideInventory *bool `json:"allow_override_inventory,omitempty"`
+
+	// allow override limit
+	AllowOverrideLimit *bool `json:"allow_override_limit,omitempty"`
+
+	// allow override skip galaxy install
+	AllowOverrideSkipGalaxyInstall *bool `json:"allow_override_skip_galaxy_install,omitempty"`
+
+	// allow override skip tags
+	AllowOverrideSkipTags *bool `json:"allow_override_skip_tags,omitempty"`
+
+	// allow override tags
+	AllowOverrideTags *bool `json:"allow_override_tags,omitempty"`
+
+	// auto approve
+	AutoApprove *bool `json:"auto_approve,omitempty"`
+
+	// backend filename
+	BackendFilename *string `json:"backend_filename,omitempty"`
+
+	// galaxy collection args
+	GalaxyCollectionArgs []string `json:"galaxy_collection_args"`
+
+	// galaxy role args
+	GalaxyRoleArgs []string `json:"galaxy_role_args"`
+
+	// hide diff
+	HideDiff *bool `json:"hide_diff,omitempty"`
+
+	// hide dry run
+	HideDryRun *bool `json:"hide_dry_run,omitempty"`
+
+	// limit
+	Limit []string `json:"limit"`
+
+	// override backend
+	OverrideBackend *bool `json:"override_backend,omitempty"`
+
+	// skip galaxy install
+	SkipGalaxyInstall *bool `json:"skip_galaxy_install,omitempty"`
+
+	// skip tags
+	SkipTags []string `json:"skip_tags"`
+
+	// tags
+	Tags []string `json:"tags"`
+
+	// template task params additional properties
+	TemplateTaskParamsAdditionalProperties map[string]any `json:"-"`
+}
+
+// UnmarshalJSON unmarshals this object with additional properties from JSON
+func (m *TemplateTaskParams) UnmarshalJSON(data []byte) error {
+	// stage 1, bind the properties
+	var stage1 struct {
+
+		// allow auto approve
+		AllowAutoApprove *bool `json:"allow_auto_approve,omitempty"`
+
+		// allow debug
+		AllowDebug *bool `json:"allow_debug,omitempty"`
+
+		// allow destroy
+		AllowDestroy *bool `json:"allow_destroy,omitempty"`
+
+		// allow override inventory
+		AllowOverrideInventory *bool `json:"allow_override_inventory,omitempty"`
+
+		// allow override limit
+		AllowOverrideLimit *bool `json:"allow_override_limit,omitempty"`
+
+		// allow override skip galaxy install
+		AllowOverrideSkipGalaxyInstall *bool `json:"allow_override_skip_galaxy_install,omitempty"`
+
+		// allow override skip tags
+		AllowOverrideSkipTags *bool `json:"allow_override_skip_tags,omitempty"`
+
+		// allow override tags
+		AllowOverrideTags *bool `json:"allow_override_tags,omitempty"`
+
+		// auto approve
+		AutoApprove *bool `json:"auto_approve,omitempty"`
+
+		// backend filename
+		BackendFilename *string `json:"backend_filename,omitempty"`
+
+		// galaxy collection args
+		GalaxyCollectionArgs []string `json:"galaxy_collection_args"`
+
+		// galaxy role args
+		GalaxyRoleArgs []string `json:"galaxy_role_args"`
+
+		// hide diff
+		HideDiff *bool `json:"hide_diff,omitempty"`
+
+		// hide dry run
+		HideDryRun *bool `json:"hide_dry_run,omitempty"`
+
+		// limit
+		Limit []string `json:"limit"`
+
+		// override backend
+		OverrideBackend *bool `json:"override_backend,omitempty"`
+
+		// skip galaxy install
+		SkipGalaxyInstall *bool `json:"skip_galaxy_install,omitempty"`
+
+		// skip tags
+		SkipTags []string `json:"skip_tags"`
+
+		// tags
+		Tags []string `json:"tags"`
+	}
+	if err := json.Unmarshal(data, &stage1); err != nil {
+		return err
+	}
+	var rcv TemplateTaskParams
+
+	rcv.AllowAutoApprove = stage1.AllowAutoApprove
+	rcv.AllowDebug = stage1.AllowDebug
+	rcv.AllowDestroy = stage1.AllowDestroy
+	rcv.AllowOverrideInventory = stage1.AllowOverrideInventory
+	rcv.AllowOverrideLimit = stage1.AllowOverrideLimit
+	rcv.AllowOverrideSkipGalaxyInstall = stage1.AllowOverrideSkipGalaxyInstall
+	rcv.AllowOverrideSkipTags = stage1.AllowOverrideSkipTags
+	rcv.AllowOverrideTags = stage1.AllowOverrideTags
+	rcv.AutoApprove = stage1.AutoApprove
+	rcv.BackendFilename = stage1.BackendFilename
+	rcv.GalaxyCollectionArgs = stage1.GalaxyCollectionArgs
+	rcv.GalaxyRoleArgs = stage1.GalaxyRoleArgs
+	rcv.HideDiff = stage1.HideDiff
+	rcv.HideDryRun = stage1.HideDryRun
+	rcv.Limit = stage1.Limit
+	rcv.OverrideBackend = stage1.OverrideBackend
+	rcv.SkipGalaxyInstall = stage1.SkipGalaxyInstall
+	rcv.SkipTags = stage1.SkipTags
+	rcv.Tags = stage1.Tags
+	*m = rcv
+
+	// stage 2, remove properties and add to map
+	stage2 := make(map[string]json.RawMessage)
+	if err := json.Unmarshal(data, &stage2); err != nil {
+		return err
+	}
+
+	delete(stage2, "allow_auto_approve")
+	delete(stage2, "allow_debug")
+	delete(stage2, "allow_destroy")
+	delete(stage2, "allow_override_inventory")
+	delete(stage2, "allow_override_limit")
+	delete(stage2, "allow_override_skip_galaxy_install")
+	delete(stage2, "allow_override_skip_tags")
+	delete(stage2, "allow_override_tags")
+	delete(stage2, "auto_approve")
+	delete(stage2, "backend_filename")
+	delete(stage2, "galaxy_collection_args")
+	delete(stage2, "galaxy_role_args")
+	delete(stage2, "hide_diff")
+	delete(stage2, "hide_dry_run")
+	delete(stage2, "limit")
+	delete(stage2, "override_backend")
+	delete(stage2, "skip_galaxy_install")
+	delete(stage2, "skip_tags")
+	delete(stage2, "tags")
+	// stage 3, add additional properties values
+	if len(stage2) > 0 {
+		result := make(map[string]any)
+		for k, v := range stage2 {
+			var toadd any
+			if err := json.Unmarshal(v, &toadd); err != nil {
+				return err
+			}
+			result[k] = toadd
+		}
+		m.TemplateTaskParamsAdditionalProperties = result
+	}
+
+	return nil
+}
+
+// MarshalJSON marshals this object with additional properties into a JSON object
+func (m TemplateTaskParams) MarshalJSON() ([]byte, error) {
+	var stage1 struct {
+
+		// allow auto approve
+		AllowAutoApprove *bool `json:"allow_auto_approve,omitempty"`
+
+		// allow debug
+		AllowDebug *bool `json:"allow_debug,omitempty"`
+
+		// allow destroy
+		AllowDestroy *bool `json:"allow_destroy,omitempty"`
+
+		// allow override inventory
+		AllowOverrideInventory *bool `json:"allow_override_inventory,omitempty"`
+
+		// allow override limit
+		AllowOverrideLimit *bool `json:"allow_override_limit,omitempty"`
+
+		// allow override skip galaxy install
+		AllowOverrideSkipGalaxyInstall *bool `json:"allow_override_skip_galaxy_install,omitempty"`
+
+		// allow override skip tags
+		AllowOverrideSkipTags *bool `json:"allow_override_skip_tags,omitempty"`
+
+		// allow override tags
+		AllowOverrideTags *bool `json:"allow_override_tags,omitempty"`
+
+		// auto approve
+		AutoApprove *bool `json:"auto_approve,omitempty"`
+
+		// backend filename
+		BackendFilename *string `json:"backend_filename,omitempty"`
+
+		// galaxy collection args
+		GalaxyCollectionArgs []string `json:"galaxy_collection_args"`
+
+		// galaxy role args
+		GalaxyRoleArgs []string `json:"galaxy_role_args"`
+
+		// hide diff
+		HideDiff *bool `json:"hide_diff,omitempty"`
+
+		// hide dry run
+		HideDryRun *bool `json:"hide_dry_run,omitempty"`
+
+		// limit
+		Limit []string `json:"limit"`
+
+		// override backend
+		OverrideBackend *bool `json:"override_backend,omitempty"`
+
+		// skip galaxy install
+		SkipGalaxyInstall *bool `json:"skip_galaxy_install,omitempty"`
+
+		// skip tags
+		SkipTags []string `json:"skip_tags"`
+
+		// tags
+		Tags []string `json:"tags"`
+	}
+
+	stage1.AllowAutoApprove = m.AllowAutoApprove
+	stage1.AllowDebug = m.AllowDebug
+	stage1.AllowDestroy = m.AllowDestroy
+	stage1.AllowOverrideInventory = m.AllowOverrideInventory
+	stage1.AllowOverrideLimit = m.AllowOverrideLimit
+	stage1.AllowOverrideSkipGalaxyInstall = m.AllowOverrideSkipGalaxyInstall
+	stage1.AllowOverrideSkipTags = m.AllowOverrideSkipTags
+	stage1.AllowOverrideTags = m.AllowOverrideTags
+	stage1.AutoApprove = m.AutoApprove
+	stage1.BackendFilename = m.BackendFilename
+	stage1.GalaxyCollectionArgs = m.GalaxyCollectionArgs
+	stage1.GalaxyRoleArgs = m.GalaxyRoleArgs
+	stage1.HideDiff = m.HideDiff
+	stage1.HideDryRun = m.HideDryRun
+	stage1.Limit = m.Limit
+	stage1.OverrideBackend = m.OverrideBackend
+	stage1.SkipGalaxyInstall = m.SkipGalaxyInstall
+	stage1.SkipTags = m.SkipTags
+	stage1.Tags = m.Tags
+
+	// make JSON object for known properties
+	props, err := json.Marshal(stage1)
+	if err != nil {
+		return nil, err
+	}
+
+	if len(m.TemplateTaskParamsAdditionalProperties) == 0 { // no additional properties
+		return props, nil
+	}
+
+	// make JSON object for the additional properties
+	additional, err := json.Marshal(m.TemplateTaskParamsAdditionalProperties)
+	if err != nil {
+		return nil, err
+	}
+
+	if len(props) < 3 { // "{}": only additional properties
+		return additional, nil
+	}
+
+	// concatenate the 2 objects
+	return jsonutils.ConcatJSON(props, additional), nil
+}
+
+// Validate validates this template task params
+func (m *TemplateTaskParams) Validate(_ strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this template task params based on context it is used
+func (m *TemplateTaskParams) ContextValidate(_ context.Context, _ strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *TemplateTaskParams) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return jsonutils.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *TemplateTaskParams) UnmarshalBinary(b []byte) error {
+	var res TemplateTaskParams
+	if err := jsonutils.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
